--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- header -->
@@ -18,7 +19,7 @@
           </li>
 
           <li>
-            <a href="">Портфоліо</a>
+            <a href="./portfolio.html">Портфоліо</a>
           </li>
 
           <li>
