--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -12,171 +15,132 @@
 
     <header>
       <nav>
-        <a href="./index.html" lang="en">WebStudio</a>
-        <ul>
+        <a class="logo" href="./index.html" lang="en">Web<span class="logo-header">Studio</span></a>
+        <ul class="site-nav list">
           <li>
-            <a href="">Студія</a>
+            <a class="link" href="">Студія</a>
           </li>
 
           <li>
-            <a href="./portfolio.html">Портфоліо</a>
+            <a class="link" href="./portfolio.html">Портфоліо</a>
           </li>
 
           <li>
-            <a href="">Контакти</a>
+            <a class="link" href="">Контакти</a>
           </li>
         </ul>
       </nav>
-      <ul>
+      <ul class="auth-nav list">
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
 
         <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
 
     <!-- main -->
     <main>
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+      <!-- hero -->
+      <section class="hero">
+        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+        <button class="button" type="button">Замовити послугу</button>
       </section>
 
-      <section>
-        <!-- <h2>привілегії</h2> -->
-        <ul>
+      <!-- features -->
+      <section class="section">
+        <!-- <h2 class="title">особливості</h2> -->
+        <ul class="features list">
           <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
-            </p>
+            <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p class="text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
 
           <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
-            <p>
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
-            </p>
+            <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
+            <p class="text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
           </li>
 
           <li>
-            <h3>ПЛАНУВАННЯ</h3>
-            <p>
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
+            <h3 class="title">ПЛАНУВАННЯ</h3>
+            <p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
 
           <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
-            </p>
+            <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p class="text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
         </ul>
       </section>
 
-      <section>
-        <h2>Чим ми займаємося</h2>
-        <ul>
+      <!-- work -->
+      <section class="section">
+        <h2 class="title">Чим ми займаємося</h2>
+        <ul class="work list">
           <li>
-            <img
-              src="./images/box1.jpg"
-              alt="дизайнерскі рішення для ноутбуку"
-              width="370"
-            />
+            <img src="./images/box1.jpg" alt="дизайнерскі рішення для ноутбуку" width="370" />
           </li>
 
           <li>
-            <img
-              src="./images/box2.jpg"
-              alt=" мобільні дизайнерскі рішення "
-              width="370"
-            />
+            <img src="./images/box2.jpg" alt=" мобільні дизайнерскі рішення " width="370" />
           </li>
 
           <li>
-            <img
-              src="./images/box3.jpg"
-              alt="планшетні дизайнерскі рішення "
-              width="370"
-            />
+            <img src="./images/box3.jpg" alt="планшетні дизайнерскі рішення " width="370" />
           </li>
         </ul>
       </section>
 
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
+      <!-- team -->
+      <section class="section">
+        <h2 class="title">Наша команда</h2>
+        <ul class="team list">
           <li>
-            <img
-              src="./images/igor.jpg"
-              alt="перший член команди"
-              width="270"
-            />
-            <h3>Ігор Дем'яненко</h3>
-            <p lang="en">Product Designer</p>
+            <img src="./images/igor.jpg" alt="перший член команди" width="270" />
+            <h3 class="title">Ігор Дем'яненко</h3>
+            <p class="text" lang="en">Product Designer</p>
           </li>
 
           <li>
-            <img
-              src="./images/olga.jpg"
-              alt="другий член команди"
-              width="270"
-            />
-            <h3>Ольга Рєпіна</h3>
-            <p lang="en">Frontend Developer</p>
+            <img src="./images/olga.jpg" alt="другий член команди" width="270" />
+            <h3 class="title">Ольга Рєпіна</h3>
+            <p class="text" lang="en">Frontend Developer</p>
           </li>
 
           <li>
-            <img
-              src="./images/mikola.jpg"
-              alt="третій член команди"
-              width="270"
-            />
-            <h3>Микола Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <img src="./images/mikola.jpg" alt="третій член команди" width="270" />
+            <h3 class="title">Микола Тарасов</h3>
+            <p class="text" lang="en">Marketing</p>
           </li>
 
           <li>
-            <img
-              src="./images/mihaylo.jpg"
-              alt="четверти член команди"
-              width="270"
-            />
-            <h3>Михайло Єрмаков</h3>
-            <p lang="en">UI Designer</p>
+            <img src="./images/mihaylo.jpg" alt="четверти член команди" width="270" />
+            <h3 class="title">Михайло Єрмаков</h3>
+            <p class="text" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
     <!-- footer -->
-    <footer>
-      <a href="./index.html" lang="en">WebStudio</a>
+    <footer class="footer">
+      <a class="logo" href="./index.html" lang="en">Web<span class="logo-footer">Studio</span></a>
       <address>
-        <ul>
+        <ul class="footer-list list">
           <li>
-            <a
-              href="https://goo.gl/maps/v9PzNUbJb5U7j13fA"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
+            <a class="address-link" href="https://goo.gl/maps/v9PzNUbJb5U7j13fA" target="_blank" rel="noopener noreferrer">
               м. Київ, пр-т Лесі Українки, 26
             </a>
           </li>
 
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
 
           <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
