--- a/portfolio.html
+++ b/portfolio.html
@@ -5,170 +5,133 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- header -->
     <header>
       <nav>
-        <a href="./index.html" lang="en">WebStudio</a>
-        <ul>
+        <a class="logo" href="./index.html" lang="en">Web<span class="logo-header">Studio</span></a>
+        <ul class="site-nav list">
           <li>
-            <a href="">Студія</a>
+            <a class="link" href="">Студія</a>
           </li>
 
           <li>
-            <a href="./portfolio.html">Портфоліо</a>
+            <a class="link" href="./portfolio.html">Портфоліо</a>
           </li>
 
           <li>
-            <a href="">Контакти</a>
+            <a class="link" href="">Контакти</a>
           </li>
         </ul>
       </nav>
-      <ul>
+      <ul class="auth-nav list">
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
 
         <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
 
     <!-- main -->
     <main>
-      <!-- <h2>список портфоліо</h2> -->
-      <ul>
-        <li><button type="button">Усі</button></li>
-        <li><button type="button">Веб-сайти</button></li>
-        <li><button type="button">Додатки</button></li>
-        <li><button type="button">Дизайн</button></li>
-        <li><button type="button">Маркетинг</button></li>
-      </ul>
-      <ul>
-        <li>
-          <img
-            src="./images/portfolio/tehnokryak.jpg"
-            alt="зображення у ноутбуці"
-            width="370"
-            height="294"
-          />
-          <h3>Технокряк</h3>
-          <p>Веб-сайт</p>
-        </li>
+      <section class="section">
+        <!-- <h1 class="title">список портфоліо</h2> -->
 
-        <li>
-          <img
-            src="./images/portfolio/poster.jpg"
-            alt="баскетболісти"
-            width="370"
-            height="294"
-          />
-          <h3>Постер <span lang="en">New Orlean vs Golden Star</span></h3>
-          <p>Дизайн</p>
-        </li>
+        <!-- filter-button -->
+        <ul class="filter-btn list">
+          <li><button class="btn" type="button">Усі</button></li>
+          <li><button class="btn" type="button">Веб-сайти</button></li>
+          <li><button class="btn" type="button">Додатки</button></li>
+          <li><button class="btn" type="button">Дизайн</button></li>
+          <li><button class="btn" type="button">Маркетинг</button></li>
+        </ul>
 
-        <li>
-          <img
-            src="./images/portfolio/seafood.jpg"
-            alt="назва ресторану"
-            width="370"
-            height="294"
-          />
-          <h3>Ресторан <span lang="en">Seafood</span></h3>
-          <p>Додаток</p>
-        </li>
+        <!-- filter -->
+        <ul class="filter list">
+          <li>
+            <img src="./images/portfolio/tehnokryak.jpg" alt="зображення у ноутбуці" width="370" height="294" />
+            <h2 class="title">Технокряк</h2>
+            <p class="text">Веб-сайт</p>
+          </li>
 
-        <li>
-          <img
-            src="./images/portfolio/prime.jpg"
-            alt="навушники"
-            width="370"
-            height="294"
-          />
-          <h3>Проєкт <span lang="en">Prime</span></h3>
-          <p>Маркетинг</p>
-        </li>
+          <li>
+            <img src="./images/portfolio/poster.jpg" alt="баскетболісти" width="370" height="294" />
+            <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+            <p class="text">Дизайн</p>
+          </li>
 
-        <li>
-          <img
-            src="./images/portfolio/boxes.jpg"
-            alt="коробки"
-            width="370"
-            height="294"
-          />
-          <h3>Проєкт <span lang="en">Boxes</span></h3>
-          <p>Додаток</p>
-        </li>
+          <li>
+            <img src="./images/portfolio/seafood.jpg" alt="назва ресторану" width="370" height="294" />
+            <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
+            <p class="text">Додаток</p>
+          </li>
 
-        <li>
-          <img
-            src="./images/portfolio/inspiration.jpg"
-            alt="монитор"
-            width="370"
-            height="294"
-          />
-          <h3><span lang="en">Inspiration has no Borders</span></h3>
-          <p>Веб-сайт</p>
-        </li>
+          <li>
+            <img src="./images/portfolio/prime.jpg" alt="навушники" width="370" height="294" />
+            <h2 class="title">Проєкт <span lang="en">Prime</span></h2>
+            <p class="text">Маркетинг</p>
+          </li>
 
-        <li>
-          <img
-            src="./images/portfolio/limited-edition.jpg"
-            alt="розгорнути книжка"
-            width="370"
-            height="294"
-          />
-          <h3>Видання <span lang="en">Limited Edition</span></h3>
-          <p>Маркетинг</p>
-        </li>
+          <li>
+            <img src="./images/portfolio/boxes.jpg" alt="коробки" width="370" height="294" />
+            <h2 class="title">Проєкт <span lang="en">Boxes</span></h2>
+            <p class="text">Додаток</p>
+          </li>
 
-        <li>
-          <img
-            src="./images/portfolio/lab.jpg"
-            alt="латинські букви лаб"
-            width="370"
-            height="294"
-          />
-          <h3>Проєкт <span lang="en">LAB</span></h3>
-          <p>Маркетинг</p>
-        </li>
+          <li>
+            <img src="./images/portfolio/inspiration.jpg" alt="монитор" width="370" height="294" />
+            <h2 class="title">
+              <span lang="en">Inspiration has no Borders</span>
+            </h2>
+            <p class="text">Веб-сайт</p>
+          </li>
 
-        <li>
-          <img
-            src="./images/portfolio/growing.jpg"
-            alt="робота за ноутбуком"
-            width="370"
-            height="294"
-          />
-          <h3><span lang="en">Growing Business</span></h3>
-          <p>Додаток</p>
-        </li>
-      </ul>
+          <li>
+            <img src="./images/portfolio/limited-edition.jpg" alt="розгорнути книжка" width="370" height="294" />
+            <h2 class="title">Видання <span lang="en">Limited Edition</span></h2>
+            <p class="text">Маркетинг</p>
+          </li>
+
+          <li>
+            <img src="./images/portfolio/lab.jpg" alt="латинські букви лаб" width="370" height="294" />
+            <h2 class="title">Проєкт <span lang="en">LAB</span></h2>
+            <p class="text">Маркетинг</p>
+          </li>
+
+          <li>
+            <img src="./images/portfolio/growing.jpg" alt="робота за ноутбуком" width="370" height="294" />
+            <h2 class="title"><span lang="en">Growing Business</span></h2>
+            <p class="text">Додаток</p>
+          </li>
+        </ul>
+      </section>
     </main>
 
     <!-- footer -->
-    <footer>
-      <a href="./index.html" lang="en">WebStudio</a>
+    <footer class="footer">
+      <a class="logo" href="./index.html" lang="en">Web<span class="logo-footer">Studio</span></a>
       <address>
-        <ul>
+        <ul class="footer-list list">
           <li>
-            <a
-              href="https://goo.gl/maps/v9PzNUbJb5U7j13fA"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
+            <a class="address-link" href="https://goo.gl/maps/v9PzNUbJb5U7j13fA" target="_blank" rel="noopener noreferrer">
               м. Київ, пр-т Лесі Українки, 26
             </a>
           </li>
 
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
 
           <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
