правки після перевірки(імена класів,дані "боді")

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
           </li>
 
           <li>
-            <a class="link" href="./portfolio.html">Портфоліо</a>
+            <a class="link current" href="./portfolio.html">Портфоліо</a>
           </li>
 
           <li>
@@ -42,74 +42,74 @@
 
     <!-- main -->
     <main>
-      <section class="section">
-        <!-- <h1 class="title">список портфоліо</h2> -->
+      <section class="project">
+        <h1 class="project-title visually-hidden">список портфоліо</h1>
 
         <!-- filter-button -->
-        <ul class="filter-btn list">
-          <li><button class="btn" type="button">Усі</button></li>
-          <li><button class="btn" type="button">Веб-сайти</button></li>
-          <li><button class="btn" type="button">Додатки</button></li>
-          <li><button class="btn" type="button">Дизайн</button></li>
-          <li><button class="btn" type="button">Маркетинг</button></li>
+        <ul class="filters list">
+          <li><button class="filters-btn" type="button">Усі</button></li>
+          <li><button class="filters-btn" type="button">Веб-сайти</button></li>
+          <li><button class="filters-btn" type="button">Додатки</button></li>
+          <li><button class="filters-btn" type="button">Дизайн</button></li>
+          <li><button class="filters-btn" type="button">Маркетинг</button></li>
         </ul>
 
-        <!-- filter -->
-        <ul class="filter list">
+        <!-- projects list -->
+        <ul class="projects list">
           <li>
             <img src="./images/portfolio/tehnokryak.jpg" alt="зображення у ноутбуці" width="370" height="294" />
-            <h2 class="title">Технокряк</h2>
-            <p class="text">Веб-сайт</p>
+            <h2 class="projects-title">Технокряк</h2>
+            <p class="projects-text">Веб-сайт</p>
           </li>
 
           <li>
             <img src="./images/portfolio/poster.jpg" alt="баскетболісти" width="370" height="294" />
-            <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-            <p class="text">Дизайн</p>
+            <h2 class="projects-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+            <p class="projects-text">Дизайн</p>
           </li>
 
           <li>
             <img src="./images/portfolio/seafood.jpg" alt="назва ресторану" width="370" height="294" />
-            <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
-            <p class="text">Додаток</p>
+            <h2 class="projects-title">Ресторан <span lang="en">Seafood</span></h2>
+            <p class="projects-text">Додаток</p>
           </li>
 
           <li>
             <img src="./images/portfolio/prime.jpg" alt="навушники" width="370" height="294" />
-            <h2 class="title">Проєкт <span lang="en">Prime</span></h2>
-            <p class="text">Маркетинг</p>
+            <h2 class="projects-title">Проєкт <span lang="en">Prime</span></h2>
+            <p class="projects-text">Маркетинг</p>
           </li>
 
           <li>
             <img src="./images/portfolio/boxes.jpg" alt="коробки" width="370" height="294" />
-            <h2 class="title">Проєкт <span lang="en">Boxes</span></h2>
-            <p class="text">Додаток</p>
+            <h2 class="projects-title">Проєкт <span lang="en">Boxes</span></h2>
+            <p class="projects-text">Додаток</p>
           </li>
 
           <li>
             <img src="./images/portfolio/inspiration.jpg" alt="монитор" width="370" height="294" />
-            <h2 class="title">
+            <h2 class="projects-title">
               <span lang="en">Inspiration has no Borders</span>
             </h2>
-            <p class="text">Веб-сайт</p>
+            <p class="projects-text">Веб-сайт</p>
           </li>
 
           <li>
             <img src="./images/portfolio/limited-edition.jpg" alt="розгорнути книжка" width="370" height="294" />
-            <h2 class="title">Видання <span lang="en">Limited Edition</span></h2>
-            <p class="text">Маркетинг</p>
+            <h2 class="projects-title">Видання <span lang="en">Limited Edition</span></h2>
+            <p class="projects-text">Маркетинг</p>
           </li>
 
           <li>
             <img src="./images/portfolio/lab.jpg" alt="латинські букви лаб" width="370" height="294" />
-            <h2 class="title">Проєкт <span lang="en">LAB</span></h2>
-            <p class="text">Маркетинг</p>
+            <h2 class="projects-title">Проєкт <span lang="en">LAB</span></h2>
+            <p class="projects-text">Маркетинг</p>
           </li>
 
           <li>
             <img src="./images/portfolio/growing.jpg" alt="робота за ноутбуком" width="370" height="294" />
-            <h2 class="title"><span lang="en">Growing Business</span></h2>
-            <p class="text">Додаток</p>
+            <h2 class="projects-title"><span lang="en">Growing Business</span></h2>
+            <p class="projects-text">Додаток</p>
           </li>
         </ul>
       </section>
