--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <!-- header -->
 
     <header>
-      <nav>
+      <nav class="nav">
         <a class="logo" href="./index.html" lang="en">Web<span class="logo-header">Studio</span></a>
         <ul class="site-nav list">
           <li>
-            <a class="link" href="">Студія</a>
+            <a class="link current" href="">Студія</a>
           </li>
 
           <li>
@@ -50,35 +50,35 @@
       </section>
 
       <!-- features -->
-      <section class="section">
-        <!-- <h2 class="title">особливості</h2> -->
+      <section class="featur">
+        <h2 class="visually-hidden featur-title">особливості</h2>
         <ul class="features list">
           <li>
-            <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p class="text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+            <h3 class="features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p class="features-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
 
           <li>
-            <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
-            <p class="text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            <h3 class="features-title">ПУНКТУАЛЬНІСТЬ</h3>
+            <p class="features-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
           </li>
 
           <li>
-            <h3 class="title">ПЛАНУВАННЯ</h3>
-            <p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
+            <h3 class="features-title">ПЛАНУВАННЯ</h3>
+            <p class="features-text">Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
 
           <li>
-            <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p class="text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            <h3 class="features-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p class="features-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
         </ul>
       </section>
 
       <!-- work -->
-      <section class="section">
-        <h2 class="title">Чим ми займаємося</h2>
-        <ul class="work list">
+      <section class="work">
+        <h2 class="work-title">Чим ми займаємося</h2>
+        <ul class="works list">
           <li>
             <img src="./images/box1.jpg" alt="дизайнерскі рішення для ноутбуку" width="370" />
           </li>
@@ -94,31 +94,31 @@
       </section>
 
       <!-- team -->
-      <section class="section">
-        <h2 class="title">Наша команда</h2>
-        <ul class="team list">
+      <section class="team">
+        <h2 class="team-title">Наша команда</h2>
+        <ul class="teams list">
           <li>
             <img src="./images/igor.jpg" alt="перший член команди" width="270" />
-            <h3 class="title">Ігор Дем'яненко</h3>
-            <p class="text" lang="en">Product Designer</p>
+            <h3 class="teams-title">Ігор Дем'яненко</h3>
+            <p class="teams-text" lang="en">Product Designer</p>
           </li>
 
           <li>
             <img src="./images/olga.jpg" alt="другий член команди" width="270" />
-            <h3 class="title">Ольга Рєпіна</h3>
-            <p class="text" lang="en">Frontend Developer</p>
+            <h3 class="teams-title">Ольга Рєпіна</h3>
+            <p class="teams-text" lang="en">Frontend Developer</p>
           </li>
 
           <li>
             <img src="./images/mikola.jpg" alt="третій член команди" width="270" />
-            <h3 class="title">Микола Тарасов</h3>
-            <p class="text" lang="en">Marketing</p>
+            <h3 class="teams-title">Микола Тарасов</h3>
+            <p class="teams-text" lang="en">Marketing</p>
           </li>
 
           <li>
             <img src="./images/mihaylo.jpg" alt="четверти член команди" width="270" />
-            <h3 class="title">Михайло Єрмаков</h3>
-            <p class="text" lang="en">UI Designer</p>
+            <h3 class="teams-title">Михайло Єрмаков</h3>
+            <p class="teams-text" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
