--- a/index.html
+++ b/index.html
@@ -15,28 +15,28 @@
 
     <header>
       <nav class="nav">
-        <a class="logo" href="./index.html" lang="en">Web<span class="logo-header">Studio</span></a>
+        <a class="logo decor" href="./index.html" lang="en">Web<span class="logo-header">Studio</span></a>
         <ul class="site-nav list">
           <li>
-            <a class="link current" href="">Студія</a>
+            <a class="link decor current" href="">Студія</a>
           </li>
 
           <li>
-            <a class="link" href="./portfolio.html">Портфоліо</a>
+            <a class="link decor" href="./portfolio.html">Портфоліо</a>
           </li>
 
           <li>
-            <a class="link" href="">Контакти</a>
+            <a class="link decor" href="">Контакти</a>
           </li>
         </ul>
       </nav>
       <ul class="auth-nav list">
         <li>
-          <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="link decor" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
 
         <li>
-          <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="link decor" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
@@ -51,7 +51,7 @@
 
       <!-- features -->
       <section class="featur">
-        <h2 class="visually-hidden featur-title">особливості</h2>
+        <h2 class="visually-hidden section-title">особливості</h2>
         <ul class="features list">
           <li>
             <h3 class="features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -77,7 +77,7 @@
 
       <!-- work -->
       <section class="work">
-        <h2 class="work-title">Чим ми займаємося</h2>
+        <h2 class="section-title">Чим ми займаємося</h2>
         <ul class="works list">
           <li>
             <img src="./images/box1.jpg" alt="дизайнерскі рішення для ноутбуку" width="370" />
@@ -95,7 +95,7 @@
 
       <!-- team -->
       <section class="team">
-        <h2 class="team-title">Наша команда</h2>
+        <h2 class="section-title">Наша команда</h2>
         <ul class="teams list">
           <li>
             <img src="./images/igor.jpg" alt="перший член команди" width="270" />
@@ -126,21 +126,21 @@
 
     <!-- footer -->
     <footer class="footer">
-      <a class="logo" href="./index.html" lang="en">Web<span class="logo-footer">Studio</span></a>
+      <a class="logo decor" href="./index.html" lang="en">Web<span class="logo-footer">Studio</span></a>
       <address>
         <ul class="footer-list list">
           <li>
-            <a class="address-link" href="https://goo.gl/maps/v9PzNUbJb5U7j13fA" target="_blank" rel="noopener noreferrer">
+            <a class="address-link decor" href="https://goo.gl/maps/v9PzNUbJb5U7j13fA" target="_blank" rel="noopener noreferrer">
               м. Київ, пр-т Лесі Українки, 26
             </a>
           </li>
 
           <li>
-            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="link decor" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
 
           <li>
-            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="link decor" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
