--- a/portfolio.html
+++ b/portfolio.html
@@ -14,28 +14,28 @@
     <!-- header -->
     <header>
       <nav>
-        <a class="logo" href="./index.html" lang="en">Web<span class="logo-header">Studio</span></a>
+        <a class="logo decor" href="./index.html" lang="en">Web<span class="logo-header">Studio</span></a>
         <ul class="site-nav list">
           <li>
-            <a class="link" href="">Студія</a>
+            <a class="link decor" href="">Студія</a>
           </li>
 
           <li>
-            <a class="link current" href="./portfolio.html">Портфоліо</a>
+            <a class="link decor current" href="./portfolio.html">Портфоліо</a>
           </li>
 
           <li>
-            <a class="link" href="">Контакти</a>
+            <a class="link decor" href="">Контакти</a>
           </li>
         </ul>
       </nav>
       <ul class="auth-nav list">
         <li>
-          <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="link decor" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
 
         <li>
-          <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="link decor" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
@@ -117,21 +117,21 @@
 
     <!-- footer -->
     <footer class="footer">
-      <a class="logo" href="./index.html" lang="en">Web<span class="logo-footer">Studio</span></a>
+      <a class="logo decor" href="./index.html" lang="en">Web<span class="logo-footer">Studio</span></a>
       <address>
         <ul class="footer-list list">
           <li>
-            <a class="address-link" href="https://goo.gl/maps/v9PzNUbJb5U7j13fA" target="_blank" rel="noopener noreferrer">
+            <a class="address-link decor" href="https://goo.gl/maps/v9PzNUbJb5U7j13fA" target="_blank" rel="noopener noreferrer">
               м. Київ, пр-т Лесі Українки, 26
             </a>
           </li>
 
           <li>
-            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="link decor" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
 
           <li>
-            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="link decor" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
